# VOccultationPhotometry

./: .gitignore  README.md  pylintrc  pyproject.toml
.github/workflows/: ci.yml  publish.yml  windows-artifact.yml  windows-release.yml
src/voccultation/: __init__.py  __main__.py  data_context.py  main.py
src/voccultation/data_structures/: __init__.py  data_containers.py
src/voccultation/methods/: __init__.py  drift_profile.py  drift_slice.py  mean_reference_track.py  profile_deconvolution.py  tracks_detect.py
src/voccultation/model/: __init__.py  data_containers.py  data_context.py  drift_detect.py  drift_profile.py  drift_slice.py  occultation_context.py  plot.py  reference_context.py
src/voccultation/ui/: __init__.py  detect_tracks_panel.py  image_adjust_panel.py  navigation_panel.py  occultation_track_panel.py  reference_track_panel.py  track_selector.py  ui.py
tests/: test_data_containers.py
